--- a/src/components/Home/Navigation/NavigationHome.css
+++ b/src/components/Home/Navigation/NavigationHome.css
@@ -10,7 +10,7 @@ input{
     border-color: white;
 }
 button{
-    width: 75px;
+    width: 80px;
     padding: 8px;
     border-width: 0;
     border-radius: 5px;
